--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gogwarts-frontend",
+  "name": "webpack-template",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
